--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,6 +103,8 @@ services:
 
     hostname: ${APP_NAME}_CELERY_WORKER
     command: celery worker -A run_celery --loglevel=${CELERY_LOG_LEVEL}
+    env_file:
+      - ./dev.env
     environment:
       #- DEBUG=1
       - FLASK_CONFIG=${APP_CONFIG}
