--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -9,6 +9,7 @@ Flask==1.0.2
 Flask-Login==0.4.1
 Flask-Migrate==2.4.0
 Flask-SQLAlchemy==2.3.2
+gunicorn==19.9.0
 itsdangerous==1.1.0
 jdcal==1.4
 Jinja2==2.10
@@ -16,9 +17,6 @@ kombu==4.3.0
 Mako==1.0.7
 MarkupSafe==1.1.0
 mysql-connector-python==8.0.15
-#MySQL-python==1.2.5
-numpy==1.16.1
-openpyxl==2.6.0
 pandas==0.24.1
 protobuf==3.6.1
 pycparser==2.19
@@ -32,4 +30,3 @@ SQLAlchemy==1.2.18
 vine==1.2.0
 Werkzeug==0.14.1
 xlrd==1.2.0
-XlsxWriter==1.1.4
