Flask Kick Start

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -52,6 +52,6 @@ RUN git clone -b ${APP_CODE_BRANCH} https://${GIT_ACCESS_TOKEN}:x-oauth-basic@gi
 #=========================================================================================
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
-RUN chmod +x web_boot.sh
+RUN chmod +x /web/web_boot.sh
 
 
