--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -145,7 +145,7 @@ services:
         - GIT_USERNAME=${GIT_USERNAME}
         - GIT_REPO_NAME=${GIT_REPO_NAME}
     hostname: ${APP_NAME}_WEB
-    #command: 
+    command: gunicorn -w 4 -b 0.0.0.0:5000 --access-logfile - --error-logfile - run:app
     env_file:
       - ./.env
     environment:
@@ -168,7 +168,7 @@ services:
     expose:
       # Opens port 5000 on the container
       - '${FLASK_EXPOSE_PORT}'
-    entrypoint: "./web/web_boot.sh"
+    #entrypoint: "./web/web_boot.sh"
 
 
 
