--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
 #=========================================================================================
   mysql:
     image: mysql:5.7
-    hostname: ${APP_NAME}_MYSQL
+    hostname: mysql
     environment:
       MYSQL_DATABASE: ${APP_NAME}_db
       # So you don't have to use root, but you can if you like
@@ -56,7 +56,7 @@ services:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASS}
     ports:
       #- "${MYSQL_EXPOSE_PORT}:${MYSQL_PORT}"
-      - "7306:3306"
+      - '7306:3306'
     expose:
       # Opens port 3306 on the container
       - "7306"
@@ -112,7 +112,7 @@ services:
       - COMPOSE_PROJECT_NAME=${APP_NAME}
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_USER_PASS}
-      - MYSQL_HOST=127.0.0.1 #${APP_NAME}_MYSQL
+      - MYSQL_HOST=mysql #${APP_NAME}_MYSQL
       - MYSQL_PORT=3306
       - MYSQL_DB=${APP_NAME}_db
       - FLASK_SECRET=${FLASK_SECRET}
