Flask Kick Start

--- a/.env_sample
+++ b/.env_sample
@@ -1,51 +1,84 @@
+# Maintained by Tim Hiatt <timbohiatt@gmail.com>
+#
+# All of these Variables should be configured to the specifics of the application you
+# are trying to build. Each variable is used by either the "Docker-Compose" file or the
+# "Docker" build file. 
+#
+# You can have one of these .env files per Environment. Make sure the "APP_CODE_BRANCH" 
+# branch aligns correctly with your GIT Hub Branches names to load the correct code base.
+# Also the configuration "APP_CONFIG" shoudl be lowercase. It accepts (By Default):
+# ["development, test, production"]. Be very careful not to load APP_CONFIG "Production" 
+# against a "Development or Test or Feature" code Branch.
+#
+# You should end up with 4 Docker Containers that Communicate Successfuly together when
+# you run the Docker-Compose file against this .env file
+#
+# [FLASK] - Web App Container with Base Website built on SQL Alchemy and Bootstrap
+# [CELERY] - Celery Worker for processing Background Tasks
+# [RABBIT-MQ] - Rabbit Message Broker to handle the communication between Flask and Celery
+# [MYSQL] - Database Backend for running the flask application and handling App Data.
+#
+#
+# Instructions:
+#
+# 1) RUN: git clone -b master --single-branch https://github.com/timbohiatt/FlaskKickStart
+#
+# 2) Take the .env_sample in the git repository. Alter and populate the correct cofniguration 
+#    values of your choice. Copy the new .env_sample to FlaskKickStart/ and rename it to .env
+#
+# 3) Navigate to the FlaskKickStart/ directory and Run "Docker-Compose Up  --build" 
+#
+# 4) Validate Successfull Build by visiting the Site: 127.0.0.1:8080
+#
+#
+
+
 
 #===================================================
 # [	GITHUB ENVIRONMENT VARIABLES	]
 #===================================================
-GIT_USERNAME=""
-GIT_REPO=""
-#Generate this inside your GIT Hib Account
-GIT_ACCESS_TOKEN=""
+GIT_USERNAME=timbohiatt
+GIT_REPO_NAME=FlaskKickStart
+GIT_ACCESS_TOKEN=70ef45e18e5e79a536db2c97e7e3e943c8f83cc5
 
 
 #===================================================
 # [	APP ENVIRONMENT VARIABLES	]
 #===================================================
-APP_NAME=""
-#Git Hub Code Branch from which we will build the Application
-APP_CODE_BRANCH=""
-APP_CONFIG="development"
+APP_NAME=FKS
+APP_CODE_BRANCH=master
+APP_CONFIG=production
 
 
 #===================================================
 # [	FLASK ENVIRONMENT VARIABLES	]
 #===================================================
-FLASK_SECRET=""
+FLASK_SECRET=93ULKd5L6LERVz9G
 FLASK_EXPOSE_PORT=8080
 #Debug = 1 or 0
-#FLASK_DEBUG="1" 
+#FLASK_DEBUG=1
 
 
 #===================================================
 # [	MYSQL ENVIRONMENT VARIABLES	]
 #===================================================
-MYSQL_USER=""
-MYSQL_USER_PASS=""
-MYSQL_ROOT_PASS=""
-MYSQL_PORT=""
-MYSQL_EXPOSE_PORT=""
+MYSQL_HOST=mysql
+MYSQL_USER=admin
+MYSQL_USER_PASS=vtBFHa4KNBBE4JzK
+MYSQL_ROOT_PASS=e7UNPDwr5vFEDKm3
+MYSQL_PORT=3306
+MYSQL_EXPOSE_PORT=8801
 
 
 #===================================================
 # [	CELERY WORKER ENVIRONMENT VARIABLES	]
 #===================================================
 CELERY_EXPOSE_PORT=5555
-
+#Log Level (Info, Debug, Warning, Error, or Critical)
+CELERY_LOG_LEVEL=debug
 
 #===================================================
 # [	RABBIT-MQ ENVIRONMENT VARIABLES	]
 #===================================================
-RABBITMQ_EXPOSE_PORT=""
+RABBITMQ_EXPOSE_PORT=5672
 
-#Log Level (Info, Debug, Warning, Error, or Critical)
-RABBITMQ_LOG_LEVEL="debug"
